# Laby

./: CMakeLists.txt  Makefile  main.cpp  palindrom.cpp  palindrom.h  test.cpp
